Add initial tlv